--- a/index.html
+++ b/index.html
@@ -3,6 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
+
+    <style>
+        #board {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            width: 300px;
+            height: 300px;
+        }
+
+        .cell {
+            border: 1px solid #000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100px;
+            height: 100px;
+            box-sizing: border-box;
+        }
+
+        #message {
+            margin-top: 20px;
+            font-size: 18px;
+        }
+    </style>
+
 </head>
 <body>
 
