--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         .cell {
             width: 100px;
             height: 100px;
-            border: 1px solid #000;
+            border: 1px solid black;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 32px;
+            font-size: 60px;
             cursor: pointer;
             box-sizing: border-box;
         }
